--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - mnp-network
     # Ensure storage directory has proper permissions on startup
     entrypoint: ["/bin/bash", "-c"]
-    command: ["mkdir -p /app/storage && chmod -R 777 /app/storage 2>/dev/null || true && /app/init-storage.sh && uvicorn app.main:app --host 0.0.0.0 --port 8000"]
+    command: ["mkdir -p /app/storage && chmod -R 777 /app/storage 2>/dev/null || true && bash /app/init-storage.sh 2>/dev/null || true && uvicorn app.main:app --host 0.0.0.0 --port 8000"]
     healthcheck:
       test: ["CMD-SHELL", "python -c \"import urllib.request; urllib.request.urlopen('http://localhost:8000/docs').read()\" || exit 1"]
       interval: 5s
