--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,10 +1,13 @@
+# Resolver for Docker DNS
+resolver 127.0.0.11 valid=30s;
+
 server {
     listen 80;
     # Accept all domain names and IP addresses
     # To use specific domain, replace _ with your domain name:
     # Example: server_name mnp.example.com www.mnp.example.com;
     # Or to accept both domain and IP: server_name mnp.example.com www.mnp.example.com _;
-    server_name _;
+    server_name nmp.local www.nmp.local _;
     root /usr/share/nginx/html;
     index index.html;
 
@@ -23,8 +26,9 @@ server {
     add_header X-XSS-Protection "1; mode=block" always;
 
     # API proxy - proxy all API endpoints to backend
-    location ~ ^/(auth|users|projects|ai|docs|openapi\.json) {
-        proxy_pass http://backend:8000;
+    location ~ ^/(auth|users|projects|ai|docs|openapi\.json|folders|summary|project-options) {
+        set $backend http://backend:8000;
+        proxy_pass $backend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
