--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,15 +10,15 @@ JWT_SECRET=your-very-secure-random-secret-key-minimum-32-characters
 JWT_ALG=HS256
 ACCESS_TOKEN_EXPIRE_MIN=1440
 
-# AI Model Configuration (Ollama)
-# สำหรับ Docker: ใช้ http://ollama:11434 (เชื่อมต่อกับ Ollama container ใน Docker network)
-# สำหรับ Development บน Host: ใช้ http://host.docker.internal:11434 (เชื่อมต่อกับ Ollama ที่รันบน host machine)
-# 
-# โมเดลที่แนะนำสำหรับ Network Configuration Analysis:
-# - qwen2.5-coder:14b (แนะนำ) - สมดุลระหว่างความแม่นยำและประสิทธิภาพ, เร็วกว่า 32b
-#   ต้องการ RAM ~8-10GB, Model size ~8GB, เหมาะกับเซิร์ฟเวอร์ที่มี RAM 16GB+
-# - qwen2.5-coder:32b - ความแม่นยำสูงสุด แต่ช้ากว่าและใช้ resource มาก, ต้องการ RAM ~16-20GB
-# - qwen2.5-coder:7b - เร็วกว่าแต่ความแม่นยำต่ำกว่า, ต้องการ RAM ~4-6GB
-AI_MODEL_NAME=qwen2.5-coder:14b
-AI_MODEL_VERSION=v2-coder-14b
-AI_MODEL_ENDPOINT=http://ollama:11434
+# Ollama — Remote server (Scope 2.3.5)
+# Used by llm_service (Analysis) and topology_service (Topology generation)
+OLLAMA_BASE_URL=http://10.4.15.152:11434
+OLLAMA_MODEL=deepseek-coder-v2:16b
+OLLAMA_TIMEOUT=300
+
+# Topology: use LLM for topology generation (true) or rule-based only (false)
+TOPOLOGY_USE_LLM=true
+
+# Legacy (optional — llm_service prefers OLLAMA_* above)
+# AI_MODEL_NAME=qwen2.5-coder:14b
+# AI_MODEL_ENDPOINT=http://ollama:11434
