--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite --host 0.0.0.0",
     "build": "vite build",
+    "build:debug": "BUILD_MINIFY=false vite build",
     "preview": "vite preview --host 0.0.0.0"
   },
   "dependencies": {
