--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,9 +12,9 @@ ACCESS_TOKEN_EXPIRE_MIN=1440
 
 # Ollama — Remote server (Scope 2.3.5)
 # Used by llm_service (Analysis) and topology_service (Topology generation)
-OLLAMA_BASE_URL=http://10.4.15.152:11434
-OLLAMA_MODEL=deepseek-coder-v2:16b
-OLLAMA_TIMEOUT=300
+OLLAMA_BASE_URL=http://10.4.15.52:11434
+OLLAMA_MODEL=qwen2.5:7b
+OLLAMA_TIMEOUT=600
 
 # Topology: use LLM for topology generation (true) or rule-based only (false)
 TOPOLOGY_USE_LLM=true
