--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview --host 0.0.0.0"
   },
   "dependencies": {
+    "lucide-react": "^0.563.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-diff-viewer-continued": "^3.4.0"
+    "react-diff-viewer-continued": "^3.4.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
