--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - "8000:8000"
     env_file:
       - ./backend/.env
+    environment:
+      - TZ=Asia/Bangkok
     volumes:
       - ./backend:/app
       - ./storage:/app/storage
@@ -35,6 +37,8 @@ services:
     container_name: mnp-frontend
     ports:
       - "5173:5173"
+    environment:
+      - TZ=Asia/Bangkok
     volumes:
       - ./frontend/src:/app/src
       - ./.cursor:/app/.cursor
@@ -56,6 +60,7 @@ services:
       - ./mongo-data:/data/db
     environment:
       MONGO_INITDB_DATABASE: manage_network_projects
+      TZ: Asia/Bangkok
     healthcheck:
       test: [ "CMD-SHELL", "mongo --eval 'db.runCommand(\"ping\").ok' || exit 1" ]
       interval: 5s
@@ -73,6 +78,8 @@ services:
       - "11434:11434"
     volumes:
       - ollama-data:/root/.ollama
+    environment:
+      TZ: Asia/Bangkok
     # Resource requirements for qwen2.5-coder:32b model:
     # - RAM: ~16-20GB recommended (model size ~18GB)
     # - CPU: 4+ cores recommended for better performance
